# DataflowTemplates

./: .classpath  .factorypath  .gitignore  .project  @  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Cachiman README.md  README  README-KEAP.md  README.md  activate-service-account.sh  build.gradle  build.sh  cloudbuild.yaml  compile.sh  contributors.md  data.cql  delete-cell.sh  delete-row.sh  diff.txt  env.sh  errors.json  example-input.txt  fix_tests.sh  format.sh  install.sh  launch_load_generator.sh  launch_migration.sh  launcher_logs.txt  lint.sh  metrics.json  metrics.txt  metrics2.json  metrics2.txt  mvn  poc_test_results.md  pom.xml  pom.xml.orig  (+22 more)
.agent/: skills_index.md
.agents/: skills_index.md
.circleci/: config.yml
.gemini/: config.yaml
.github/: CODEOWNERS  codecov.yml  dependabot.yml  release.yml
.jetskicli/: 54a20886-bbd3-484f-837e-888b57bed997.json
.nondex/: 245GYUp5X0BGSnuhtk07QB+QOmGrZIGDgDhExaNSI=.run
checkstyle/: checkstyle.xml
cicd/: go.mod  go.sum  run-build  run-checkstyle  (+6 more)
python/src/main/python/bigquery-anomaly-detection/: main.py  pyproject.toml  requirements.txt  requirements_all.txt  setup.py
python/src/main/python/bigquery-anomaly-detection/src/bqmonitor/: cdc.py  metric.py  pipeline.py  relative_change_detector.py  safe_eval.py  timestamp_buffer.py
python/src/main/python/bigquery-anomaly-detection/src/bqmonitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/main/python/job-builder-util-transforms/: copy_files_to_gcs.py  provider_listing_template.yaml  pyproject.toml  read_from_delta_lake.py
(+10287 files in other folders)
